--- a/Implementation/DomainTier/.settings/org.eclipse.wst.common.component
+++ b/Implementation/DomainTier/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="LiTest Domain Tier">
+    <wb-module deploy-name="LiTest - Domain Tier">
         <wb-resource deploy-path="/" source-path="/Source"/>
         <wb-resource deploy-path="/" source-path="/AcceptanceTests"/>
         <wb-resource deploy-path="/" source-path="/ObjectTests"/>
